[tool.poetry]
name = "ucsd-proj-19-3-logreg"
version = "0.1.0"
description = ""
authors = ["asmith81 <alden.w.smith.iii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.12"
dvc = "^3.58.0"
numpy = ">=1.26.0,<2.1.0"
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
